--- a/contactus.css
+++ b/contactus.css
@@ -127,6 +127,17 @@ button.submit-btn {
   margin-top: 30px;
 }
 
+/* Footer Text */
+.footer-text {
+  width: 100%;
+  text-align: center;
+  color: #333333;
+  font-family: 'Fraunces', serif;
+  font-size: 28px;
+  font-weight: bold;
+  margin: 40px 10px;
+}
+
 /* Responsive Media Queries */
 @media (max-width: 1024px) {
   .container {
