--- a/navstyles.css
+++ b/navstyles.css
@@ -16,11 +16,9 @@ body {
 }
 
 .logo {
-  display: flex;
-  align-items: center;
-  font-size: 1.7rem;
-  font-weight: bold;
-  color: #2d3e50;
+  width: 220px;
+  height: auto;
+  padding: 15px;
 }
 
 .logo img {
