--- a/body.css
+++ b/body.css
@@ -195,19 +195,29 @@
   .body-section {
     padding: 30px 20px;
     gap: 30px;
+    align-items: flex-start;
   }
 
+  .text {
+  min-width: unset;
+  max-width: 100%;
+}
+
   .text h1 {
-    font-size: 32px;
+    font-size: 26px;
+    line-height: 1.2;
   }
 
   .text p {
-    font-size: 15px;
+    font-size: 14px;
+    line-height: 1.6;
   }
 
   .custom-btn {
     padding: 12px 16px;
     font-size: 14px;
+    width:100%;
+    text-align: center;
   }
 
   .features-grid {
@@ -222,6 +232,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    padding-top: 30px;
+    padding-top: 20px;
+    width: 100%;
   }
 }
