--- a/footer.css
+++ b/footer.css
@@ -1,6 +1,17 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+}
+
 footer {
   background-color: #50C2C9;
   width: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 footer .logo {
