--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,9 @@ body {
   height: 681px;
   border-radius: 60px;
   object-fit: cover;
+  overflow: hidden;
+    height: 264px;
+    width: 341px; 
 }
 
 .image-container-1 {
@@ -95,6 +98,11 @@ body {
   color: #fff;
   width: 100%;  /* remove fixed width */
   height: auto; /* remove fixed height */
+}
+
+.intro-text {
+  padding-top: 30px;
+  padding-bottom: 120px;
 }
 
 .block img {
@@ -168,10 +176,13 @@ body {
 
   .text h1 {
     font-size: 34px;
+    padding-top: 30px;
   }
 
   .text p {
-    font-size: 18px;
+    font-size: 20px;
+    padding-top: 10px;
+    padding-bottom: 80px;
   }
 
   .features-glance-container h2 {
@@ -182,10 +193,13 @@ body {
 @media (max-width: 600px) {
   .text h1 {
     font-size: 28px;
+    padding-top: 20px;
   }
 
   .text p {
     font-size: 16px;
+    padding-top: 15px;
+    padding-bottom: 60px;
   }
 
   .image-container,
