--- a/campaignstyles.css
+++ b/campaignstyles.css
@@ -9,17 +9,14 @@
   background: #e0f6f6;
   border-radius: 30px;
   overflow: hidden;
-  margin: 0 auto;
-  padding: 20px;
-  max-width: 1200px;
-  width: 100%;
+  margin-left: 80px;
+  margin-right: 80px;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
 }
 
-
 .explore-campaigns img {
   width: 100%;
-  max-width: 100%;
+  max-width: 500px;
   object-fit: cover;
 }
 
@@ -40,16 +37,6 @@
   color: #333;
 }
 
-.custom-btn {
-  background-color: #50C2C9; 
-  color: white;
-  border-radius: 10px;
-}
-
-.custom-btn:hover {
-  background-color: #3A9FA5; 
-}
-
 .explore-text button {
   padding: 10px 20px;
   background-color: #4ac6cb;
@@ -61,25 +48,30 @@
 }
 
 .ongoing-heading {
-  margin-top: 100px;
+  margin-top: 80px;
   font-size: 24px;
-  font-weight: 700;
+  font-weight: 900;
   border-bottom: 2px solid #2E3A59;
-  display: inline-block;
-  color: #2E3A59;
+  display: block; /* change from inline-block */
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 50px;
   font-family: 'Fraunces', serif;
+  color: #2E3A59;
+  text-align: center;
 }
 
 #services .card {
     color: #000;
+    margin-bottom: 30px;
     background-color: #CADBDB;
     height: 520px;
     width: 341px;
     border-radius: 57px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
-    margin-bottom: 70px;
+    margin-bottom: 90px;
 }
 
 .img-container {
@@ -124,29 +116,6 @@
 
 /* Mobile screens */
 @media (max-width: 600px) {
-   .explore-campaigns {
-    flex-direction: column; /* Force stacking */
-    margin: 20px; /* Less side margin for mobile */
-    align-items: center; /* Center align content */
-    padding: 10px;
-  }
-  .campaign-card {
-    width: 100%; /* full width on small screens */
-    margin: 10px 0;
-  }
-
-  .explore-text {
-    width: 100%; /* Full width on mobile */
-    padding: 20px;
-    text-align: center;
-  }
-
-  .explore-campaigns img {
-    width: 100%;
-    max-width: 100%;
-    height: auto;
-  }
-
   .campaigns-section {
     padding: 30px 20px;
   }
